fix: Fixed images and videos long loading times and fixed dark mode

--- a/src/App.css
+++ b/src/App.css
@@ -2,8 +2,14 @@
   color-scheme: light dark;
   --bg-color: light-dark(#FAFAFA, #161616);
   --txt-color: light-dark(#161616, #FAFAFA);
-  --image-filter: light-dark(invert(0%), invert(100%));
+  --social-image-filter: invert(0);
 
+}
+
+@media (prefers-color-scheme: dark) {
+  :root {
+    --social-image-filter: invert(1);
+  }
 }
 
 html, body {
@@ -100,6 +106,12 @@ html, body {
 .image {
   opacity: .6;
   transition: opacity .3s cubic-bezier(0.075, 0.82, 0.165, 1)
+}
+
+.contact-image {
+  display: block;
+  object-fit: contain;
+  filter: var(--social-image-filter);
 }
 
 .image:hover {
